--- a/homeoptik/templates/oscar/partials/nav_primary.html
+++ b/homeoptik/templates/oscar/partials/nav_primary.html
@@ -45,7 +45,7 @@
                                 {% category_tree depth=1 as tree_categories %}
                                 {% if tree_categories %}
                                     <!-- col -->
-                                    <div class="col-md-3">
+                                    <div class="{% if offers %}col-md-3{% else %}col-md-offset-1 col-md-4{% endif %}">
                                         <h5>По категориям</h5>
                                         <ul class="links">
                                             {% for tree_category, info in tree_categories %}
@@ -59,12 +59,12 @@
                                 {% endif %}
 
                                 <!-- col -->
-                                <div class="col-md-3">
+                                <div class="{% if offers %}col-md-3{% else %}col-md-4{% endif %}">
                                     <h5>По брендам</h5>
                                     <ul class="links">
-{#                                        <li {% if tree_category.get_absolute_url == request.get_full_path %}class="active"{% endif %}>#}
-{#                                            <a href="{{ tree_category.get_absolute_url }}">{{ tree_category.name }}</a>#}
-{#                                        </li>#}
+                                        <li {% if tree_category.get_absolute_url == request.get_full_path %}class="active"{% endif %}>
+                                            <a href="/catalogue/?selected_facets=brand_exact:Essilor">Essilor</a>
+                                        </li>
                                     </ul>
                                 </div>
                                 <!-- /col -->
