--- a/homeoptik/templates/oscar/search/partials/facet.html
+++ b/homeoptik/templates/oscar/search/partials/facet.html
@@ -4,17 +4,57 @@
 {#{% has_choice as has_choice %}#}
 {#{% if has_choice %}#}
 <!-- Panel -->
+<li class="dropdown">
+    <a href="#collapse{{ number }}" data-toggle="collapse">
+        <span class="text">{{ name }}</span>
+        <span class="toggler ti ti-plus"></span>
+    </a>
 
+    <!-- Collapse -->
+    <div id="collapse{{ number }}" class="collapse">
+        <div class="panel-body no-pad-t no-pad-b">
+            {% for item in items %}
+                <div class="checkbox">
+                    {#        {% if not item.disabled  %}#}
+                    <label>
+                        {% if item.selected %}
+                            <input class="facet_checkbox" type="checkbox" name="{{ item.name }}" checked />
+                            <input class="facet_url" type="hidden" name="url_for_{{ item.name }}" value="{{ item.deselect_url }}" />
+                            <strong>{{ item.name }}</strong>
+                        {% else %}
+                            {% if item.disabled %}
+                                <input type="checkbox" name="{{ item.name }}" disabled />
+                                {{ item.name }}
+                            {% else %}
+                                <input class="facet_checkbox" type="checkbox" name="{{ item.name }}" />
+                                <input class="facet_url" type="hidden" name="url_for_{{ item.name }}" value="{{ item.select_url }}" />
+                                <a href="{{ item.select_url }}">{{ item.name }}</a>
+                            {% endif %}
+                        {% endif %}
+                        {% if item.show_count %}
+                            ({{ item.count }})
+                        {% endif %}
+                    </label>
+
+                    {#        {% endif %}#}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+    <!-- /Collapse -->
+</li>
+
+{% comment %}
 <div class="panel panel-default no-margin {% if number %}no-border-t{% endif %}">
     <!-- Heading -->
-    <div class="panel-heading no-bg-color">
+{#    <div class="panel-heading no-bg-color">#}
         <h4 class="panel-title">
-            <a data-toggle="collapse"  href="#collapse{{ number }}" aria-expanded="true">
+            <a class="panel-heading no-bg-color" data-toggle="collapse"  href="#collapse{{ number }}" aria-expanded="true">
                 {{ name }}
             </a>
             <i class="font-size-sm toggler ti ti-plus"></i>
         </h4>
-    </div>
+{#    </div>#}
     <!-- /Heading -->
 
     <!-- Collapse -->
@@ -53,67 +93,4 @@
 
 </div>
 
-<!-- ul-toggle -->
-
-{#<li>{{ name }}<i class="toggler ti ti-plus"></i>#}
-{#    <ul>#}
-{#        {% for item in items %}#}
-{#            <div class="checkbox">#}
-{#                            {% if not item.disabled  %}#}
-{#                <label>#}
-{#                    {% if item.selected %}#}
-{#                        <input class="facet_checkbox" type="checkbox" name="{{ item.name }}" checked />#}
-{#                        <input class="facet_url" type="hidden" name="url_for_{{ item.name }}" value="{{ item.deselect_url }}" />#}
-{#                        <strong>{{ item.name }}</strong>#}
-{#                    {% else %}#}
-{#                        {% if item.disabled %}#}
-{#                            <input type="checkbox" name="{{ item.name }}" disabled />#}
-{#                            {{ item.name }}#}
-{#                        {% else %}#}
-{#                            <input class="facet_checkbox" type="checkbox" name="{{ item.name }}" />#}
-{#                            <input class="facet_url" type="hidden" name="url_for_{{ item.name }}" value="{{ item.select_url }}" />#}
-{#                            <a href="{{ item.select_url }}">{{ item.name }}</a>#}
-{#                        {% endif %}#}
-{#                    {% endif %}#}
-{#                    {% if item.show_count %}#}
-{#                        ({{ item.count }})#}
-{#                    {% endif %}#}
-{#                </label>#}
-{##}
-{#                {% endif %}#}
-{#            </div>#}
-{#        {% endfor %}#}
-{#    </ul>#}
-{#</li>#}
-
-{% comment %}
-<!-- /Panel -->
-<label>{{ name }}</label>
-{% for item in items %}
-    <div class="checkbox">
-        {#                {% if not item.disabled  %}#}
-        <label>
-            {% if item.selected %}
-                <input class="" type="checkbox" name="{{ item.name }}" checked />
-                <input type="hidden" name="url_for_{{ item.name }}" value="{{ item.deselect_url }}" />
-                <strong>{{ item.name }}</strong>
-            {% else %}
-                {% if item.disabled %}
-                    <input type="checkbox" name="{{ item.name }}" disabled />
-                    {{ item.name }}
-                {% else %}
-                    <input class="" type="checkbox" name="{{ item.name }}" />
-                    <input type="hidden" name="url_for_{{ item.name }}" value="{{ item.select_url }}" />
-                    <a href="{{ item.select_url }}">{{ item.name }}</a>
-                {% endif %}
-            {% endif %}
-            {% if item.show_count %}
-                ({{ item.count }})
-            {% endif %}
-        </label>
-
-        {#    {% endif %}#}
-    </div>
-{% endfor %}
-{#{% endif %}#}
 {% endcomment %}
