--- a/homeoptik/templates/oscar/catalogue/browse.html
+++ b/homeoptik/templates/oscar/catalogue/browse.html
@@ -50,12 +50,18 @@
         <div class="side-widget no-margin-l">
 
             <h5 class="boxed-title">{% trans "Refine by" %}</h5>
+            <nav class="ukb-nav-side navbar vnav vnav-md" role="navigation">
+                <!-- Navbar Collapse-->
+                <div class="">
+                    <ul class="nav navbar-nav">
 
-            <form class="panel-group">
-                {% for field, data in facet_data.items %}
-                    {% include 'search/partials/facet.html' with number=forloop.counter0 name=data.name items=data.results %}
-                {% endfor %}
-            </form>
+                        {% for field, data in facet_data.items %}
+                            {% include 'search/partials/facet.html' with number=forloop.counter0 name=data.name items=data.results %}
+                        {% endfor %}
+
+                    </ul>
+                </div>
+            </nav>
 
         </div>
         <!-- /Side Widget -->
